Fix voting overflow and increase count to get trusted to 4.

--- a/MatchMaker/wwwroot/css/site.css
+++ b/MatchMaker/wwwroot/css/site.css
@@ -124,6 +124,7 @@ div.mapVoteBar {
     width: 1%;
     height: 24px;
     background-color: #b7f7b3;
+    white-space: nowrap;
 }
 
 .voteStartedItem {
